# navamai

./: .gitignore  CODE_OF_CONDUCT.md  README.md  docs.md  pyproject.toml
navamai-vault/: navamai-chain.sh  navamai.yml  trail.yml
navamai-vault/.obsidian/: graph.json  workspace.json
navamai-vault/Apps/: todomaster_install_script.sh
navamai-vault/Audits/: trail_analysis_report_20240907_100827.md  trail_analysis_report_20240907_180634.md  trail_analysis_report_20240908_183330.md  trail_analysis_report_20240909_075709.md  trail_analysis_report_20240922_062903.md  trail_analysis_report_20240922_063346.md  trail_analysis_report_20240922_144059.md  trail_analysis_report_20240922_181238.md
navamai-vault/Code/: create-install-script-mkdir-create.md  expensemanager-create-expense-manager-install.md  house-price-prediction-predict-house.md  manager-create-manager-install-script.md  navamai-main-app.md  saasy-dashboard-create-dashboard-startup.md  swarm-simulator.md  todomanager.md
navamai-vault/Embeds/: README.md  Suitable Venues in Redmond.md  Top Companies by ROCE.md
navamai-vault/Gather/: Additional Streamlit features - Streamlit Docs.md  Advanced concepts of Streamlit - Streamlit Docs.md  App model summary - Streamlit Docs.md  Attention Is All You Need.md  Basic concepts of Streamlit - Streamlit Docs.md  Cloud computing - Wikipedia.md  Create a multipage app - Streamlit Docs.md  Create an app - Streamlit Docs.md  Creating multipage apps using the _pages__ directory - Streamlit Docs.md  Define multipage apps with st.Page and st.navigation - Streamlit Docs.md  Overview of multipage apps - Streamlit Docs.md  Working with widgets in multipage apps - Streamlit Docs.md
navamai-vault/Intents/: Event Planning.md  Financial Analysis.md  Product Management.md  README.md
navamai-vault/Metrics/: test_summary_20240831.yml  test_summary_20240901.yml  test_summary_20240902.yml  test_summary_20240903.yml  test_summary_20240904.yml  test_summary_20240906.yml  test_summary_20240907.yml  test_summary_20240908.yml  test_summary_20240912.yml  test_summary_20240917.yml  test_summary_20240922.yml  test_summary_20240925.yml  test_summary_20241005.yml
navamai-vault/Posts/: About NavamAI updated.md  (+24 more)
tests/: navamai.yml  test_auditor.py  test_bedrock.py  test_claude.py  test_cli.py  test_code.py  test_configure.py  test_gather.py  test_gemini.py  test_groq.py  test_images.py  test_markdown.py  test_metrics.py  test_ollama,py  test_openai.py  test_perplexity,py  test_provider.py  test_utils.py
works/: navamai.yml
(+74 files in other folders)
