[tool.poetry]
name = "navamai"
version = "0.1.11"
description = "NavamAI enhances your craft with fast, personal, quality AI"
authors = ["NavamAI <team@navamai.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "navamai", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
tiktoken = "^0.7.0"
rich = "^13.7.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
anthropic = "^0.34.1"
google-api-python-client = "^2.142.0"
groq = "^0.9.0"
openai = "^1.42.0"
google-generativeai = "^0.7.2"
pyyaml = "^6.0.2"
opencv-python = "^4.8.0"
pillow = "^10.4.0"
term-image = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
navamai = "navamai.cli:cli"